# earnest_nmf_ad_staging

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  r_requirments.txt  setup.py
atstaging/: __init__.py  amyloidstatus.py  config.py  external.py  freesurfer_cortical_colors.csv  outputs.py  petstatus.py  plotting.py  printing.py  staging.py  sustain.py  version.py
atstaging/cli/: _slurm_pipeline.py  atproc_batch.sh  atproc_delete.py  atproc_qc.py  atproc_subject.py  atproc_table.py  catalogue_loni.py
atstaging/config/: example.json  slurm_setup.sh
atstaging/dataorg/: a4.py  adni.py  gs1.py  gs2.py  habs.py  habshd.py  oasis.py  scan.py  utils.py
atstaging/nmf/: run.py  split_halves.R  utils.py
atstaging/preprocessing/: bias_correction.py  bids.py  conversion.py  convert_dicom_to_nifiti.py  debug.py  dicom_to_nifiti.py  execute.py  mripreproc_bids.py  pet.py  pet_registration.py  pipeline.py  preprocess_mri.py  qc.py  qc_images.py  qc_tools.py  registration.py  reorient.py  segmentation.py  skullstrip.py  smoothing.py
atstaging/slurm/: at_preproc_batch.sh  at_preproc_table.py  preproc_mri_batch.sh  preproc_mri_table.py
docs/: external.md  preprocessing.md
notes/: image_searches.md
scripts/: README.md  prep_scan.py
scripts/0_datasets/: README.md  a4.py  adni.py  create_master.py  gs1.py  gs2.py  gs2_reorganize_images.py  habs.py  habshd.py  oasis.py  oasis_pull_frames.py  scan.py
scripts/1_preprocessing/: README.md  average_pet_images.py  dataset_proctables.py  subset_proctable.py
scripts/2_qc/: README.md  step0_run_qc_setup.py  step1_compile_qc.py  step1_groupwise_SUVRs.py  step2_groupwise_SUVRs.py  step3_write_pathstable.py
scripts/3_amyloidstatus/: assign_amyloid_status.py  run_amyloid_pet_net.py
scripts/3_datasplitting/: README.md  assign_datasets.py
scripts/4_nmf/: README.md  calculate_loadings.py  component_overlays.py  make_component_niftis.py  post_nmf.py  run_nmf.py
scripts/5_frequencystaging/: README.md  add_other_covariates.py  create_suvr_by_stage_images.py  derive_icv.py  (+7 more)
(+132 files in other folders)
