[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "atstaging"
description = "Code for Tom's NMF & SuStaIn PET staging work."
dependencies = [
    "colorama",
    "nibabel",
    "nilearn",
    "pandas"
]
dynamic = ["version"]
requires-python = ">= 3.10"
authors =[
    {name = "Tom Earnest", email = "tom.earnest@wustl.edu"}
]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/sotiraslab/at_nmf_sustain"

[project.scripts]
at_preproc = "atstaging.preprocessing.pipeline:main"
at_preproc_table = "atstaging.slurm.at_preproc_table:main"
catalogue_loni = "atstaging.cli.catalogue_loni:main"
